@@ -1,4 +1,7 @@
 1.6.14
+	* Let ldns_resolver_nameservers_randomize keep nameservers and rtt's
+	  in sync.
+	* Let ldns_pkt_push_rr now return false on (memory) errors.
 	* Make buffer_export comply to documentation and fix buffer2str
 	* Various improvements and fixes of pyldns from Katel Slany
 	  now documented in their own Changelog.
